--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,14 @@
 solc = "0.8.15"
 bytecode_hash = "none"
 optimizer_runs = 1000000
+no_match_test = "FFI"
 
 [profile.intense]
 fuzz_runs = 10000
+no_match_test = "FFI"
+
+[profile.ffi]
+ffi = true
+match_test = "FFI"
+no_match_test = "a^"
+fuzz_runs = 1000
