--- a/foundry.toml
+++ b/foundry.toml
@@ -5,11 +5,12 @@ optimizer_runs = 1000000
 no_match_test = "FFI"
 
 [profile.intense]
-fuzz_runs = 10000
 no_match_test = "FFI"
+
+[profile.intense.fuzz]
+runs = 10000
 
 [profile.ffi]
 ffi = true
 match_test = "FFI"
 no_match_test = "a^"
-fuzz_runs = 1000
